Fix overlap

--- a/styles/main.css
+++ b/styles/main.css
@@ -969,17 +969,17 @@ i.fa.fa-close.close-modal {
 }
 
 .slide.next {
-    -webkit-transform: translateX(100%);
-        -ms-transform: translateX(100%);
-            transform: translateX(100%);
+    -webkit-transform: translateX(200%);
+        -ms-transform: translateX(200%);
+            transform: translateX(200%);
     opacity: 0;
     filter: alpha(opacity=0);
 }
 
 .slide.previous {
-    -webkit-transform: translateX(-100%);
-        -ms-transform: translateX(-100%);
-            transform: translateX(-100%);
+    -webkit-transform: translateX(-200%);
+        -ms-transform: translateX(-200%);
+            transform: translateX(-200%);
     opacity: 0;
     filter: alpha(opacity=0);
 }
